# ur3

./: .gitignore  .gitmodules  .travis.yml  BUILD-DOCKER-IMAGE.sh  LICENSE  LICENSE COMPLIANCE CONTROL  README.md  RUN-DOCKER.sh  dependencies.rosinstall  ur.code-workspace
ur3_description/: CMakeLists.txt  package.xml
ur3_description/config/: config.rviz  ur5.rviz
ur3_description/launch/: bringup_with_gripper_85.launch  display.launch  display_with_gripper.launch  display_with_gripper_85.launch  display_with_gripper_hande.launch  display_with_gripper_hande_camera.launch  load_ur_gripper_85.launch.xml  load_ur_gripper_hande.launch.xml
ur3_description/urdf/: common.gazebo.xacro  realsense_rs435.urdf.xacro  ur.gazebo.xacro  ur.transmission.xacro  ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_peg_gripper.urdf.xacro  ur3_robot.old.urdf  ur3_robot.urdf  ur3_robot.urdf.xacro  ur3_robotiq85_gripper.urdf.xacro  ur5_robot.urdf  ur5_robotiq85_gripper.urdf.xacro  ur_gripper_85.xacro  ur_gripper_hande.xacro
ur3_gazebo/: CMakeLists.txt  package.xml  setup.py
ur3_gazebo/launch/: camera.launch  gazebo_to_tf.launch  single_ur3e.launch  ur3_basic.launch  ur3_bunri.launch  ur3_cb.launch  ur3_cubes.launch  ur3_cubes_example.launch  ur3_peg.launch  ur3e.launch  ur3e_cubes.launch  ur3e_cubes_example.launch  ur3e_dual.launch  ur3e_dual_gripper.launch  ur3e_dual_gripper_camera.launch  ur3e_hande.launch  ur3e_peg.launch  ur3e_robots.launch  ur3e_with_gripper.launch  ur5_cubes.launch  ur5_cubes_140.launch  ur5_cubes_85_osx.launch  ur5_cubes_example.launch  ur_cubes.launch  ur_e_cubes.launch  ur_gripper_85_cubes.launch  ur_gripper_hande_cubes.launch  world_tf.launch
ur3_gazebo/scripts/: gazebo_to_tf.py  send_gripper.py  send_joints.py  spawner.py
ur3_gazebo/urdf/: ur_e_with_gripper.xacro  ur_gripper_85.xacro  ur_gripper_hande.xacro  ur_with_gripper.xacro
ur3_gazebo/worlds/: bunri.world  cb_task.world  cubes_task.world  ur3e.world  ur3e_dual.world
ur3_ikfast_plugin/: CMakeLists.txt  package.xml  ur3_arm_description.xml  ur3_extended_ee_description.xml
ur3_ikfast_plugin/src/: ur3_arm_ikfast_moveit_plugin.cpp  ur3_ext_ee_ikfast_moveit_plugin.cpp  ur3_ext_ee_ikfast_solver.cpp
ur3_kinematics/: CMakeLists.txt  package.xml  setup.py
ur3_kinematics/include/: e_kinematics.h  kinematics.h
ur3_kinematics/src/: e_kinematics.cpp  e_pykinematics.cpp  kinematics.cpp  pykinematics.cpp  ur3_arm_ikfast_solver.cpp  ur3e_arm_ikfast_solver.cpp
ur3e_openai/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  setup.py
ur3e_openai/config/: ur3e_basic.yaml  ur3e_ee_drl.yaml  ur3e_ee_qlearning.yaml  ur3e_ee_sac.yaml
ur3e_openai/doc/: CHANGELOG.rst  Makefile  conf.py  cube_environment.rst  index.rst  manifest.yaml  modules.rst  openai_ros.moving_cube.rst  openai_ros.robot_envs.rst  openai_ros.rst  openai_ros.task_envs.sumit_xl.rst  openai_ros_core.rst  sawyer_environment.rst
ur3e_openai/launch/: pipe_classifier.launch  realsense.launch  ur3e_basic.launch  ur3e_ee_drl.launch  ur3e_ee_qlearning.launch  ur3e_ee_sac.launch  ur3e_ee_td3.launch
ur3e_openai/scripts/: TODO_gazebo  cl_reader.py  disect_simulation.py  estimate_stiffness_from_real.py  manipulate_image.py  multiplot_reward.py  plot.ipynb  plot_details.py  plot_reward.py  plotter_utils.py  reward_plots.ipynb  robot_spawner.py  sac.py  start_drl.py  start_qlearning.py  success_rate.py  td3.py  tensorboard_plotter.ipynb  tensorboard_plotterv2.ipynb  test.ipynb  test.py
ur3e_openai/training_results/: openaigym.episode_batch.0.13587.stats.json  openaigym.episode_batch.0.16740.stats.json  openaigym.manifest.0.13587.manifest.json  openaigym.manifest.0.16740.manifest.json
ur3e_rl/: CMakeLists.txt  README.md  package.xml  pipe-README.md
ur3e_rl/config/: test_common_params.yaml  ur3e_ee_drl.yaml  ur3e_ee_rlpyt.yaml
ur3e_rl/launch/: ur3e_ee_drl.launch  ur3e_ee_qlearning.launch  ur3e_ee_rlpyt.launch  ur3e_ee_sac.launch  ur3e_ee_td3.launch
ur3e_rl/scripts/: evaluate_policy.py  sac.py  simple_env.py  start_drl.py  start_qlearning.py  start_rlpyt.py  start_rlpyt_td3.py  td3.py  tf2rl_sac.py  tf2rl_sac_args.py
ur_control/: CMakeLists.txt  package.xml  setup.py
ur_control/config/: a_bot_raw.xml  a_bot_rqt_multiplot.xml  b_bot_filtered.xml  b_bot_gravity.xml  b_bot_knife.xml  b_bot_raw.xml  ft_filter_x.xml  gripper_controller.yaml  gripper_controller_85_osx.yaml  gripper_controller_osx.yaml  rqt_multiplot.xml  rqt_multiplot_knife.xml  ur3_controllers.yaml  ur3_controllers_effort.yaml  ur3e_controllers.yaml  ur3e_controllers_effort.yaml  ur_controllers.yaml  ur_e_controllers.yaml
ur_control/launch/: ur3_controllers.launch  ur3_controllers_force_control.launch  ur3e_controllers.launch  ur3e_robot.launch  ur5e_controllers_85_osx.launch  ur5e_controllers_osx.launch  ur_controllers.launch  ur_e_controllers.launch  vive_teleoperation.launch  vive_teleoperation_gazebo.launch  vive_teleoperation_real.launch
ur_control/scripts/: cartesian_compliance_controller_examples.py  compliance_controller_examples.py  controller_examples.py  ft_filter.py  ft_sensor_publisher.py  getch.py  imu.py  joint_position_keyboard.py  joint_position_mouse6d.py  moveit_tutorial.py  plot_force_control.py  publish_wrench.py  real_controller_examples.py  sim_controller_examples.py  teleoperation_cartesian_controller.py  vive_converter.py  vive_teleoperation.py  wrench_republish.py
ur_gripper_description/: CMakeLists.txt  package.xml
ur_gripper_description/launch/: bringup_with_gripper_85.launch  display_with_gripper_85.launch  display_with_gripper_hande.launch  load_ur_gripper_85.launch.xml  load_ur_gripper_hande.launch.xml
ur_gripper_gazebo/: CMakeLists.txt  package.xml
ur_gripper_gazebo/launch/: gazebo_to_tf.launch  ur3_cubes_example.launch  ur3e_cubes_example.launch  ur3e_with_gripper.launch  ur5_cubes_example.launch  ur_gripper_85_cubes.launch  (+1 more)
ur_handeye_calibration/: CMakeLists.txt  package.xml
ur_mtc_demo/: CMakeLists.txt  package.xml
ur_pykdl/: CMakeLists.txt  LICENSE  package.xml  setup.py
(+382 files in other folders)
