CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(ur3_description)

FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()

INCLUDE_DIRECTORIES()

#############
## Install ##
#############

INSTALL(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
