<?xml version="1.0"?>
<package format="2">
  <name>ur3_gazebo</name>
  <version>0.1.1</version>
  <description>
    Gazebo simulation for the UR5 robot with a robotiq gripper
  </description>

  <author email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</author>
  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur3_description</exec_depend>
  <exec_depend>robotiq_gazebo</exec_depend>

  <export>
  </export>

</package>
