<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>ur3_kinematics</name>
  <version>0.1.0</version>
  <description>Python bindings for for UR3 robot kinematics</description>
  
  <author email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</author>
  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>liblapack-dev</build_depend>
  <build_depend>pluginlib</build_depend>
 
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>pluginlib</exec_depend>

</package>
