<?xml version="1.0"?>
<package format="2">
  <name>ur3e_openai</name>
  <version>1.0.0</version>
  <description>The ur3e_openai package</description>
  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian C Beltran-Hernandez</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>message_generation</build_depend> 
  
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>std_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
