<?xml version="1.0"?>
<package>
  <name>ur3e_rl</name>
  <version>0.0.0</version>
  <description>The ur3e_rl package</description>

  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian C Beltran-Hernandez</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur3e_openai</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ur3e_openai</run_depend>
  <run_depend>rospy</run_depend>

</package>
