CMAKE_MINIMUM_REQUIRED(VERSION 3.1.3)
PROJECT(ur_gripper_description)

FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()

INCLUDE_DIRECTORIES()

#############
## Install ##
#############

INSTALL(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY urdf DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
