<?xml version="1.0"?>
<package format="2">
  <name>ur_mtc_demo</name>
  <version>0.0.1</version>
  <description>The UR moveit_task_constructor_demo package</description>

  <author email="cristianbehe@gmail.com">Cristian Beltran</author>
  <maintainer email="cristianbehe@gmail.com">Cristian Beltran</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>rosparam_shortcuts</depend>
  <exec_depend>ur3e_hande_moveit_config</exec_depend>
</package>
